--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sieu-cam",
   "version": "0.0.0",
+  "engines": {
+    "node": ">= 20.17.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
